Minor alignment fix

--- a/sass/modules/_modules.scss
+++ b/sass/modules/_modules.scss
@@ -240,7 +240,7 @@
    text-align: center;
    padding-bottom: 20px;
    [class*="columns-"]:last-of-type{
-      padding-right: auto;
+      padding-right: 40px;
    }
    &:last-of-type{
       padding-bottom: 0;
